[package]
name = "mambembe-cli"
version = "0.1.1"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
color-eyre = "0.6.2"
dotenv = "0.15.0"
fuzzy-matcher = "0.3.7"
mambembe-keyring = { path = "../keyring/" }
mambembe-lib = { path = "../lib" }
serde = "1.0.140"
serde_json = "1.0.82"
structopt = "0.3.21"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.35"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.15", features = ["fmt", "env-filter"] }

[features]
default = ["with-keyring"]
with-keyring = ["mambembe-keyring/with-keyring"]
without-keyring = ["mambembe-keyring/without-keyring"]
