[package]
name = "mambembe-cli"
version = "0.1.1"
authors = []
edition = "2021"
repository = "https://github.com/jaysonsantos/mambembe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
color-eyre = { version = "0.6.2", features = ["issue-url"] }
dotenv = "0.15.0"
fuzzy-matcher = "0.3.7"
mambembe-keyring = { path = "../keyring/" }
mambembe-lib = { path = "../lib" }
serde = "1.0.193"
serde_json = "1.0.108"
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

[features]
default = ["with-keyring"]
with-keyring = ["mambembe-keyring/with-keyring"]
without-keyring = ["mambembe-keyring/without-keyring"]
