[package]
name = "mambembe-desktop-client"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mambembe-lib = { path = "../lib" }
iced = { git = "https://github.com/hecrj/iced.git", features = ["tokio"] }
