[package]
name = "mambembe-keyring"
version = "0.1.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
directories = { version = "4.0.1", optional = true }
keyring = { version = "1.2.1", optional = true }
lazy_static = "1.4.0"
mambembe-lib = { path = "../lib" }
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"

[features]
with-keyring = ["keyring"]
without-keyring = ["directories"]
