[package]
name = "mambembe-keyring"
version = "0.1.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
directories = { version = "5.0.1", optional = true }
keyring = { version = "2.3.2", optional = true }
lazy_static = "1.4.0"
mambembe-lib = { path = "../lib" }
serde = "1.0.196"
serde_json = "1.0.113"
thiserror = "1.0.57"
tracing = "0.1.40"

[features]
with-keyring = ["keyring"]
without-keyring = ["directories"]
