[package]
name = "mambembe-lib"
version = "0.1.1"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aes = "0.6.0"
async-trait = "0.1.56"
block-modes = "0.9.1"
data-encoding = "2.3.2"
hmac = "0.12.1"
itertools = "0.10.3"
json = "0.12.4"
lazy_static = "1.4.0"
md5 = "0.7.0"
pbkdf2 = { version = "0.11.0", default-features = false }
rand = "0.8.5"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "gzip", "rustls-tls"] }
rsa = "0.6.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sha-1 = "0.10.0"
sha2 = "0.10.2"
slauth = { git = "https://github.com/jaysonsantos/slauth", branch = "my-changes-merged", default-features = false }
thiserror = "1.0.31"
tracing = "0.1.35"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15.0"
mambembe-stub-server = { path = "../stub_server" }
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }

[build-dependencies]
dotenv = "0.15.0"

[features]
docker = []
