[package]
name = "mambembe-stub-server"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
color-eyre = "0.5.10"
lazy_static = "1.4.0"
rand = "0.8.3"
reqwest = { version = "0.11.11", default-features = false }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.64"
tide = "0.16.0"
tokio = { version = "1.8.4", features = ["full"] }
tracing = "0.1.25"
