[package]
name = "mambembe-stub-server"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
color-eyre = { version = "0.6.2", git = "https://github.com/jaysonsantos/color-eyre" }
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", default-features = false }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.35"
