[package]
name = "mambembe-stub-server"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
color-eyre = { version = "0.6.2", git = "https://github.com/jaysonsantos/color-eyre" }
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
